[package]
name = "chacha20"
description = "chacha20_poly1305 encryption tool"
version = "1.1.1"
authors = ["Avril <flanchan@cumallover.me>"]
edition = "2018"
license = "gpl-3.0-or-later"

[features]

# Explicitly clear buffers and cache after use
explicit_clear = []

[dependencies]
base64 = "0.13"
getrandom = "0.2"
openssl = "0.10"
smallvec = {version = "1.6", features=["union"]}

[build-dependencies]
rustc_version = "0.2"
