[package]
name = "chacha20"
description = "chacha20_poly1305 encryption tool"
version = "2.0.1"
authors = ["Avril <flanchan@cumallover.me>"]
edition = "2021"
license = "gpl-3.0-or-later"

[features]
default = ["mmap"]

# Try to map inputs/outputs before using buffers
mmap = ["libc"]
# Forcefully map all output real files.
# This is unsafe because we cannot distinguish the offset at which to map the file descriptor, or if there even is one.
unsafe-mappings = ["mmap"]

# Explicitly clear buffers and cache after use
explicit_clear = []

[dependencies]
base64 = "0.13"
getrandom = "0.2"
lazy_static = "1.4.0"
libc = { version = "0.2.133", optional = true }
mapped-file = { version = "0.0.2", features = ["file"] }
openssl = "0.10.45"
smallmap = "1.4.0"
smallvec = {version = "1.6", features=["union"]}

[build-dependencies]
rustc_version = "0.2"
